data/derived/comb/progs/unify/prog2158.ml.out
Characters 98-115:
  else digit ((n mod 10)::acc) (n/10) in
             ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
